--- a/config/settings.yml
+++ b/config/settings.yml
@@ -13,7 +13,7 @@
 # When viewing the details page for a location, there is an 'Edit' link
 # at the bottom of the page that takes you to the corresponding location
 # in the admin interface. Below, specify the URL for your Admin site.
-admin_site: https://ohana-api-demo.herokuapp.com/admin
+admin_site: http://search.here4reentry.com/admin
 
 ##########################
 #
@@ -30,7 +30,7 @@ admin_site: https://ohana-api-demo.herokuapp.com/admin
 # otherwise you won't receive any feedback emails.
 feedback_email:
   to:
-    - ohanapi@codeforamerica.org
+    - kelly@w-o-m.us
 
 ##########################
 #
@@ -69,7 +69,6 @@ homepage_links:
     Government Assistance:
       - Health Insurance
       - Medicare
-      - SFMNP (Food vouchers for seniors)
       - SNAP (Food Stamps)
       - 'WIC (Women, Infants, & Children)'
 
@@ -181,21 +180,6 @@ info_box_terms:
       children up to age 5.'
     url: http://www.fns.usda.gov/wic
 
-  sfmnp:
-    synonyms:
-      - sfmnp
-      - senior farmers' market nutrition program
-      - senior farmers market nutrition program
-      - food vouchers for seniors
-      - food vouchers
-    title: Senior Farmers' Market Nutrition Program
-    description:
-      "Senior Farmers' Market Nutrition Program (SFMNP)
-      provides low-income seniors with coupons that can be exchanged for eligible
-      foods at farmers' markets, roadside stands, and community-supported
-      agriculture programs."
-    url: http://www.fns.usda.gov/sfmnp
-
   snap:
     synonyms:
       - snap
@@ -256,7 +240,7 @@ site_logo: app_logo.png
 # to the end of the page title. For example, if you were viewing the page for
 # a location called "Health Insurance TeleCenter", the browser would display
 # "Health Insurance TeleCenter | Ohana Web Search" as the page title.
-site_title: Ohana Web Search
+site_title: Here For Reentry | SEARCH
 
 ###########################
 #
@@ -270,7 +254,7 @@ site_title: Ohana Web Search
 # Extensions are typically prefixed with 'Ext.', 'extension', or 'x'.
 # To just provide a space between the phone number and extension leave this
 # value blank or comment out the setting.
-phone_extension_delimiter: x
+phone_extension_delimiter: Ext.
 
 ###########################################
 #
@@ -278,11 +262,11 @@ phone_extension_delimiter: x
 #
 ###########################################
 test:
-  admin_site: http://ohana-api-demo.herokuapp.com/admin
+  admin_site: http://search.here4reentry.com/admin
 
   feedback_email:
     to:
-      - ohanapi@codeforamerica.org
+      - kelly@w-o-m.us
 
   homepage_links:
     general:
@@ -326,4 +310,4 @@ test:
     - 'العربية: ar'
     - 'Русский: ru'
 
-  site_title: Ohana Web Search
+  site_title: Here For Reentry | SEARCH
